examples/errors/loop_bound_not_constant.ail
const B = 2
const D = 4

model {
  x [B, D]
  param W [D, 1]
  y = for i in range(0, B) do matmul(x, W) end
}
